test/scc/decl/semantic-errors/079.a
079.t:3:23: error: field 'a' declared with storage specifier